[package]
name = "muninn-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for Muninn — personal knowledge base"
license = "GPL-3.0-only"

[[bin]]
name = "muninn"
path = "src/main.rs"

[dependencies]
muninn-core = { path = "../muninn-core" }
clap = { version = "4", features = ["derive"] }
tabled = "0.18"
colored = "3"
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
