[package]
name = "muninn-core"
version = "0.1.0"
edition = "2024"
description = "Core library for Muninn — vault operations, types, wikilinks, grammar"
license = "GPL-3.0-only"

[dependencies]
comrak = "0.36"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
yaml-rust2 = "0.10"
regex = "1"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
slug = "0.1"
harper-core = "0.22"
parking_lot = "0.12"
glob = "0.3"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
